[gd_scene load_steps=9 format=3 uid="uid://bnfl4nwux8mc4"]

[ext_resource type="Script" path="res://addons/vertex_painter/v2/vertex_painter.gd" id="1_pituq"]
[ext_resource type="Script" path="res://addons/vertex_painter/v2/vertex_painter_3d.gd" id="2_vflpc"]
[ext_resource type="Shader" path="res://addons/vertex_painter/v2/gpu_depth.gdshader" id="3_8jrka"]

[sub_resource type="Environment" id="Environment_hpdng"]

[sub_resource type="QuadMesh" id="QuadMesh_4magw"]
size = Vector2(0.1, 0.1)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_yrme8"]
render_priority = 0
shader = ExtResource("3_8jrka")
shader_parameter/camera_far = 100000.0

[sub_resource type="SphereMesh" id="SphereMesh_8olv6"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_eghqw"]
albedo_color = Color(0.933333, 1, 0, 1)

[node name="VertexPainter" type="CenterContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 3
script = ExtResource("1_pituq")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="EnableCheckBox" type="CheckBox" parent="VBoxContainer"]
layout_mode = 2
text = "Enable Vertex Painting"

[node name="ColorPicker" type="ColorPicker" parent="VBoxContainer"]
layout_mode = 2
edit_alpha = false
color_mode = 1
sampler_visible = false
color_modes_visible = false
sliders_visible = false
presets_visible = false

[node name="Label" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Brush Size:
"

[node name="BrushLineEdit" type="LineEdit" parent="VBoxContainer"]
layout_mode = 2
text = "5"
select_all_on_focus = true

[node name="ShowDebugCheckBox" type="CheckBox" parent="VBoxContainer"]
auto_translate_mode = 1
layout_mode = 2
text = "Show Debug Sphere"

[node name="VertexPainter3D" type="Node3D" parent="."]
script = ExtResource("2_vflpc")

[node name="SubViewport" type="SubViewport" parent="."]
handle_input_locally = false
canvas_item_default_texture_filter = 0
positional_shadow_atlas_size = 0
positional_shadow_atlas_quad_0 = 0
positional_shadow_atlas_quad_1 = 0
positional_shadow_atlas_quad_2 = 0
positional_shadow_atlas_quad_3 = 0
canvas_cull_mask = 4293918720
size = Vector2i(2, 2)
render_target_update_mode = 1

[node name="MouseCamera3D" type="Camera3D" parent="SubViewport"]
visible = false
cull_mask = 1
environment = SubResource("Environment_hpdng")
projection = 1
size = 0.1
far = 100000.0

[node name="ScreenQuad" type="MeshInstance3D" parent="SubViewport/MouseCamera3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.5)
mesh = SubResource("QuadMesh_4magw")
surface_material_override/0 = SubResource("ShaderMaterial_yrme8")

[node name="Debug" type="MeshInstance3D" parent="."]
visible = false
layers = 2
mesh = SubResource("SphereMesh_8olv6")
surface_material_override/0 = SubResource("StandardMaterial3D_eghqw")

[connection signal="pressed" from="VBoxContainer/EnableCheckBox" to="." method="_on_enable_check_box_pressed"]
[connection signal="focus_exited" from="VBoxContainer/BrushLineEdit" to="VertexPainter3D" method="_on_brush_line_edit_focus_exited"]
[connection signal="text_submitted" from="VBoxContainer/BrushLineEdit" to="VertexPainter3D" method="_on_brush_line_edit_text_submitted"]
